deploy/yamls/demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: demo
  name: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: demo
      name: demo
    spec:
      containers:
        - image: quay.com/parodos/demo:latest
          imagePullPolicy: Always
          name: demo
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
