deploy/yamls/workflowid--0a88d8a0-2aab-4183-9ad4-01d0df21b2bb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: workflowid--0a88d8a0-2aab-4183-9ad4-01d0df21b2bb
  name: workflowid--0a88d8a0-2aab-4183-9ad4-01d0df21b2bb
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: demo
                port:
                  name: port-8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
